# python-kafka-example

./: .gitignore  docker-compose.yaml  local.env  local.env.example  pyproject.toml
app/configuretion/: __init__.py  settings.py
app/consumer/: async_consumer.py
app/consumers/: basic_async_consumer.py
app/consumers/implementations/: example_async_consumer.py
app/producers/: async_producer.py
