[tool.poetry]
name = "python-kafka"
version = "0.1.0"
description = ""
authors = ["DmytroZasl <zaslavsky.dima20@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
pydantic = "^2.1.1"
httpx = "^0.24.1"
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
